Added code to improve the json card formatting, use tts, etc

--- a/protocol-timer.ipynb
+++ b/protocol-timer.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "from time import time, sleep\n",
     "from tqdm.notebook import tqdm\n",
     "from tqdm import trange\n",
-    "import datetime\n",
+    "import datetime as date\n",
     "import requests\n",
     "import json\n",
     "\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
     "    shell.payload_manager.write_payload(payload, single=False)\n",
     "    \n",
     "def calculate_seconds(timestring):\n",
-    "    time_obj = datetime.datetime.strptime(timestring, \"%H:%M:%S\")\n",
+    "    time_obj = date.datetime.strptime(timestring, \"%H:%M:%S\")\n",
     "    hours = time_obj.hour\n",
     "    minutes = time_obj.minute\n",
     "    seconds = time_obj.second\n",
@@ -105,7 +105,7 @@
     "\n",
     "\n",
     "def countdown(timestring, step_text):\n",
-    "    time_obj = datetime.datetime.strptime(timestring, \"%H:%M:%S\")\n",
+    "    time_obj = date.datetime.strptime(timestring, \"%H:%M:%S\")\n",
     "\n",
     "    hours = time_obj.hour\n",
     "    minutes = time_obj.minute\n",
@@ -126,7 +126,7 @@
     "    )\n",
     "    while total_seconds > 0:\n",
     "        # # Timer represents time left on countdown\n",
-    "        timer = datetime.timedelta(seconds=total_seconds)\n",
+    "        timer = date.timedelta(seconds=total_seconds)\n",
     "\n",
     "\n",
     "        # print(timer, sep='\\r')\n",
@@ -145,16 +145,42 @@
     "    pbar.refresh()\n",
     "    display(f\"COMPLETED {step_text}\")\n",
     "    send_discord_message(f\"COMPLETED {step_text}.\")\n",
-    "    \n",
-    "def send_discord_message(content):\n",
-    "    payload = {\n",
-    "        \"content\": content\n",
+    "\n",
+    "def compose_discord_json(message):\n",
+    "    json_payload = {\n",
+    "        \"content\": message,\n",
+    "        \"username\": \"Protocol Timer\",\n",
+    "        \"avatar_url\": \"https://raw.githubusercontent.com/github/explore/149e057770c384ddaba0393b369c2c8f16e433bb/topics/jupyter-notebook/jupyter-notebook.png\",\n",
+    "        \"tts\": True,\n",
+    "        \"embeds\": [\n",
+    "            {\n",
+    "                \"title\": \"Protocol Timer\",\n",
+    "                \"type\": \"rich\",\n",
+    "                \"timestamp\": date.datetime.utcnow().strftime(\"%Y-%m-%dT%H:%M:%SZ\"),\n",
+    "                \"fields\": [\n",
+    "                    {\n",
+    "                        \"name\": \"Protocol Step\",\n",
+    "                        \"value\": message,\n",
+    "                    },\n",
+    "                ],\n",
+    "                \"description\": \"Protocol-Timer created by [Pranav Mishra](https://drpranavmishra.com). See this project on [GitHub](https://github.com/pranavmishra90/protocol-timer)\",\n",
+    "            }\n",
+    "        ],\n",
     "    }\n",
+    "\n",
+    "    return json_payload\n",
+    "\n",
+    "    \n",
+    "def send_discord_message(message):\n",
+    "\n",
+    "    json_payload = compose_discord_json(message)\n",
+    "\n",
+    "\n",
     "    headers = {\n",
     "        \"Content-Type\": \"application/json\"\n",
     "    }\n",
     "\n",
-    "    response = requests.post(webhook_url, data=json.dumps(content), headers=headers)\n",
+    "    response = requests.post(webhook_url, data=json.dumps(json_payload), headers=headers)\n",
     "\n",
     "    if response.status_code == 204:\n",
     "        print(\"Discord notification successful!\")\n",
@@ -163,7 +189,7 @@
     "\n",
     "\n",
     "def current_datetime():\n",
-    "    current_datetime = datetime.datetime.now()\n",
+    "    current_datetime = date.datetime.now()\n",
     "\n",
     "    # Format the datetime as \"Day, mm/dd/yy at hh:mm:ss AM/PM\"\n",
     "    formatted_datetime = current_datetime.strftime(\"%A, %m/%d/%y at %I:%M:%S %p\")\n",
@@ -181,219 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Step Number</th>\n",
-       "      <th>Step Text</th>\n",
-       "      <th>Duration</th>\n",
-       "      <th>Comment</th>\n",
-       "      <th>Combined</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>15</td>\n",
-       "      <td>Paraffin (60 C)</td>\n",
-       "      <td>1:30:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 15: Paraffin (60 C)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>14</td>\n",
-       "      <td>Paraffin (60 C)</td>\n",
-       "      <td>1:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 14: Paraffin (60 C)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>13</td>\n",
-       "      <td>Paraffin (60 C)</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 13: Paraffin (60 C)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12</td>\n",
-       "      <td>Xylene (RT)</td>\n",
-       "      <td>1:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 12: Xylene (RT)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Xylene (RT)</td>\n",
-       "      <td>0:40:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 11: Xylene (RT)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Xylene (RT)</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 10: Xylene (RT)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Xylene (RT)</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 9: Xylene (RT)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>100% Ethanol (RT)</td>\n",
-       "      <td>1:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 8: 100% Ethanol (RT)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>7</td>\n",
-       "      <td>100% Ethanol (RT)</td>\n",
-       "      <td>0:50:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 7: 100% Ethanol (RT)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>6</td>\n",
-       "      <td>100% Ethanol (RT)</td>\n",
-       "      <td>0:45:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 6: 100% Ethanol (RT)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>5</td>\n",
-       "      <td>95% Ethanol (RT)</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 5: 95% Ethanol (RT)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>4</td>\n",
-       "      <td>95% Ethanol (RT)</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 4: 95% Ethanol (RT)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>3</td>\n",
-       "      <td>80% Ethanol (RT)</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 3: 80% Ethanol (RT)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2</td>\n",
-       "      <td>75% Ethanol (RT)</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Step 2: 75% Ethanol (RT)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Formalin (RT)</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Protocol from dx.doi.org/10.17504/protocols.io...</td>\n",
-       "      <td>Step 1: Formalin (RT)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Step Number          Step Text Duration  \\\n",
-       "0            15    Paraffin (60 C)  1:30:00   \n",
-       "1            14    Paraffin (60 C)  1:00:00   \n",
-       "2            13    Paraffin (60 C)  0:30:00   \n",
-       "3            12        Xylene (RT)  1:00:00   \n",
-       "4            11        Xylene (RT)  0:40:00   \n",
-       "5            10        Xylene (RT)  0:30:00   \n",
-       "6             9        Xylene (RT)  0:30:00   \n",
-       "7             8  100% Ethanol (RT)  1:00:00   \n",
-       "8             7  100% Ethanol (RT)  0:50:00   \n",
-       "9             6  100% Ethanol (RT)  0:45:00   \n",
-       "10            5   95% Ethanol (RT)  0:30:00   \n",
-       "11            4   95% Ethanol (RT)  0:30:00   \n",
-       "12            3   80% Ethanol (RT)  0:30:00   \n",
-       "13            2   75% Ethanol (RT)  0:30:00   \n",
-       "14            1      Formalin (RT)  0:30:00   \n",
-       "\n",
-       "                                              Comment  \\\n",
-       "0                                                 NaN   \n",
-       "1                                                 NaN   \n",
-       "2                                                 NaN   \n",
-       "3                                                 NaN   \n",
-       "4                                                 NaN   \n",
-       "5                                                 NaN   \n",
-       "6                                                 NaN   \n",
-       "7                                                 NaN   \n",
-       "8                                                 NaN   \n",
-       "9                                                 NaN   \n",
-       "10                                                NaN   \n",
-       "11                                                NaN   \n",
-       "12                                                NaN   \n",
-       "13                                                NaN   \n",
-       "14  Protocol from dx.doi.org/10.17504/protocols.io...   \n",
-       "\n",
-       "                     Combined  \n",
-       "0    Step 15: Paraffin (60 C)  \n",
-       "1    Step 14: Paraffin (60 C)  \n",
-       "2    Step 13: Paraffin (60 C)  \n",
-       "3        Step 12: Xylene (RT)  \n",
-       "4        Step 11: Xylene (RT)  \n",
-       "5        Step 10: Xylene (RT)  \n",
-       "6         Step 9: Xylene (RT)  \n",
-       "7   Step 8: 100% Ethanol (RT)  \n",
-       "8   Step 7: 100% Ethanol (RT)  \n",
-       "9   Step 6: 100% Ethanol (RT)  \n",
-       "10   Step 5: 95% Ethanol (RT)  \n",
-       "11   Step 4: 95% Ethanol (RT)  \n",
-       "12   Step 3: 80% Ethanol (RT)  \n",
-       "13   Step 2: 75% Ethanol (RT)  \n",
-       "14      Step 1: Formalin (RT)  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('./protocol.csv')\n",
     "\n",
@@ -442,65 +258,6 @@
     "create_new_cell('send_discord_message(f\"---- STARTING PROTOCOL at {current_datetime()} ----\")')\n",
     "\n",
     "create_new_cell(\"#------ Click here, then run each cells below ------#\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Discord notification successful!\n"
-     ]
-    }
-   ],
-   "source": [
-    "message = \"Starting a new laboratory protocol\"\n",
-    "\n",
-    "## h/t https://birdie0.github.io/discord-webhooks-guide\n",
-    "\n",
-    "def compose_discord_json(message):\n",
-    "    json_payload = {\n",
-    "        \"content\": message, \n",
-    "        \"username\": \"Protocol Timer\",\n",
-    "        \"avatar_url\": \"https://raw.githubusercontent.com/github/explore/149e057770c384ddaba0393b369c2c8f16e433bb/topics/jupyter-notebook/jupyter-notebook.png\",\n",
-    "        \"tts\": True,\n",
-    "        \"embeds\": [\n",
-    "            {\n",
-    "                \"title\": \"Protocol Timer: FFPE\",\n",
-    "                \"type\": \"rich\",\n",
-    "                \"timestamp\": datetime.datetime.utcnow().strftime('%Y-%m-%dT%H:%M:%SZ'),\n",
-    "                \"fields\": [\n",
-    "                    {\n",
-    "                        \"name\": \"Step #\",\n",
-    "                        \"value\": \"1\",\n",
-    "                        \"inline\": True\n",
-    "                    },\n",
-    "                    {\n",
-    "                        \"name\": \"Duration\",\n",
-    "                        \"value\": \"1:30\",\n",
-    "                        \"inline\": True\n",
-    "                    },\n",
-    "                    {\n",
-    "                        \"name\": \"Procedure\",\n",
-    "                        \"value\": message,\n",
-    "                    },\n",
-    "                    {\n",
-    "                        \"name\": \"Comment\",\n",
-    "                        \"value\": \"Insert some comment here\"\n",
-    "                    },\n",
-    "                    ]\n",
-    "            }\n",
-    "        ],\n",
-    "\n",
-    "    }\n",
-    "\n",
-    "    return json_payload\n",
-    "\n",
-    "send_discord_message(compose_discord_json(message))"
    ]
   },
   {
