--- a/protocol-timer.ipynb
+++ b/protocol-timer.ipynb
@@ -59,7 +59,10 @@
     "\n",
     "channel_id = parser.get('discord', 'channel_id')\n",
     "\n",
-    "webhook_url = parser.get('discord', 'webhook')"
+    "webhook_url = parser.get('discord', 'webhook')\n",
+    "\n",
+    "mailjet_api_key = parser.get('mailjet', 'api_key')\n",
+    "mailjet_secret_key = parser.get('mailjet', 'secret_key')"
    ]
   },
   {
@@ -73,12 +76,13 @@
     "    shell = get_ipython()\n",
     "\n",
     "    payload = dict(\n",
-    "        source='set_next_input',\n",
+    "        source=\"set_next_input\",\n",
     "        text=contents,\n",
     "        replace=False,\n",
     "    )\n",
     "    shell.payload_manager.write_payload(payload, single=False)\n",
-    "    \n",
+    "\n",
+    "\n",
     "def calculate_seconds(timestring):\n",
     "    time_obj = date.datetime.strptime(timestring, \"%H:%M:%S\")\n",
     "    hours = time_obj.hour\n",
@@ -87,9 +91,9 @@
     "\n",
     "    # Calculate the total number of seconds\n",
     "    total_seconds = hours * 3600 + minutes * 60 + seconds\n",
-    "    \n",
     "\n",
     "    return total_seconds\n",
+    "\n",
     "\n",
     "def step_commands(df, index_num):\n",
     "    line1 = f\"print('**{df.Combined.iloc[index_num]}**')\"\n",
@@ -99,12 +103,15 @@
     "\n",
     "    line3 = f\"countdown(df.Duration.iloc[{index_num}], df.Combined.iloc[{index_num}])\"\n",
     "\n",
-    "    combined_lines = line1 + \" \\n\" + line2 + \" \\n\" + line3 \n",
+    "    combined_lines = line1 + \" \\n\" + line2 + \" \\n\" + line3\n",
     "\n",
     "    return combined_lines\n",
     "\n",
     "\n",
     "def countdown(timestring, step_text):\n",
+    "    display(f\"Starting {step_text}\")\n",
+    "    send_discord_message(f\"Starting {step_text}.\")\n",
+    "\n",
     "    time_obj = date.datetime.strptime(timestring, \"%H:%M:%S\")\n",
     "\n",
     "    hours = time_obj.hour\n",
@@ -122,15 +129,12 @@
     "        # total=100,\n",
     "        total=total_seconds,\n",
     "        bar_format=\"{desc}   {percentage:3.0f}% [Elapsed: {elapsed} -- Remaining: {remaining}]\",\n",
-    "        \n",
     "    )\n",
     "    while total_seconds > 0:\n",
     "        # # Timer represents time left on countdown\n",
     "        timer = date.timedelta(seconds=total_seconds)\n",
     "\n",
-    "\n",
     "        # print(timer, sep='\\r')\n",
-    "\n",
     "\n",
     "        # Update the tqdm progress bar\n",
     "        # pbar.update(100 / total_seconds_original)\n",
@@ -140,11 +144,10 @@
     "        total_seconds -= 1\n",
     "        pbar.update(1)\n",
     "\n",
-    "\n",
-    "\n",
     "    pbar.refresh()\n",
     "    display(f\"COMPLETED {step_text}\")\n",
     "    send_discord_message(f\"COMPLETED {step_text}.\")\n",
+    "\n",
     "\n",
     "def compose_discord_json(message):\n",
     "    json_payload = {\n",
@@ -170,22 +173,66 @@
     "\n",
     "    return json_payload\n",
     "\n",
-    "    \n",
-    "def send_discord_message(message):\n",
     "\n",
-    "    json_payload = compose_discord_json(message)\n",
-    "\n",
-    "\n",
-    "    headers = {\n",
-    "        \"Content-Type\": \"application/json\"\n",
+    "def compose_mailjet_json(message):\n",
+    "    json_payload = {\n",
+    "        \"Messages\": [\n",
+    "            {\n",
+    "                \"From\": {\n",
+    "                    \"Email\": \"pranav_k_mishra@rush.edu\",\n",
+    "                    \"Name\": \"Pranav K Mishra\",\n",
+    "                },\n",
+    "                \"To\": [{\"Email\": \"pmishra0102@gmail.com\", \"Name\": \"Pranavs Pager\"}],\n",
+    "                \"Subject\": \"Protocol Step\",\n",
+    "                \"TextPart\": message,\n",
+    "            }\n",
+    "        ]\n",
     "    }\n",
     "\n",
-    "    response = requests.post(webhook_url, data=json.dumps(json_payload), headers=headers)\n",
+    "    return json_payload\n",
+    "\n",
+    "def send_mailjet_pager(message):\n",
+    "    json_payload = compose_mailjet_json(message)\n",
+    "\n",
+    "    print(json_payload)\n",
+    "\n",
+    "    headers = {\"Content-Type\": \"application/json\"}\n",
+    "\n",
+    "    response = requests.post(\n",
+    "        \"https://api.mailjet.com/v3/send\",\n",
+    "        auth=(mailjet_api_key, mailjet_secret_key),\n",
+    "        data=json.dumps(json_payload),\n",
+    "        headers=headers,\n",
+    "    )\n",
+    "\n",
+    "    print(\"Response Status Code:\", response.status_code)\n",
+    "    print(\"Response Text:\", response.text)\n",
+    "\n",
+    "    if response.status_code == 204:\n",
+    "        print(\"Mailjet API successful!\")\n",
+    "    else:\n",
+    "        print(f\"Failed to notify on mailjet. Status code: {response.status_code}\")\n",
+    "        display(f\"Response: {response.text}\")\n",
+    "\n",
+    "    return response\n",
+    "\n",
+    "\n",
+    "\n",
+    "def send_discord_message(message):\n",
+    "    json_payload = compose_discord_json(message)\n",
+    "\n",
+    "    headers = {\"Content-Type\": \"application/json\"}\n",
+    "\n",
+    "    response = requests.post(\n",
+    "        webhook_url, data=json.dumps(json_payload), headers=headers\n",
+    "    )\n",
     "\n",
     "    if response.status_code == 204:\n",
     "        print(\"Discord notification successful!\")\n",
     "    else:\n",
     "        print(f\"Failed to notify on discord. Status code: {response.status_code}\")\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "def current_datetime():\n",
@@ -194,7 +241,7 @@
     "    # Format the datetime as \"Day, mm/dd/yy at hh:mm:ss AM/PM\"\n",
     "    formatted_datetime = current_datetime.strftime(\"%A, %m/%d/%y at %I:%M:%S %p\")\n",
     "\n",
-    "    return formatted_datetime\n"
+    "    return formatted_datetime"
    ]
   },
   {
@@ -258,15 +305,6 @@
     "create_new_cell('send_discord_message(f\"---- STARTING PROTOCOL at {current_datetime()} ----\")')\n",
     "\n",
     "create_new_cell(\"#------ Click here, then run each cells below ------#\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#------ Click here, then run each cells below ------#"
    ]
   }
  ],
