Removed mailjet api

--- a/protocol-timer.ipynb
+++ b/protocol-timer.ipynb
@@ -59,10 +59,7 @@
     "\n",
     "channel_id = parser.get('discord', 'channel_id')\n",
     "\n",
-    "webhook_url = parser.get('discord', 'webhook')\n",
-    "\n",
-    "mailjet_api_key = parser.get('mailjet', 'api_key')\n",
-    "mailjet_secret_key = parser.get('mailjet', 'secret_key')"
+    "webhook_url = parser.get('discord', 'webhook')"
    ]
   },
   {
@@ -172,50 +169,6 @@
     "    }\n",
     "\n",
     "    return json_payload\n",
-    "\n",
-    "\n",
-    "def compose_mailjet_json(message):\n",
-    "    json_payload = {\n",
-    "        \"Messages\": [\n",
-    "            {\n",
-    "                \"From\": {\n",
-    "                    \"Email\": \"pranav_k_mishra@rush.edu\",\n",
-    "                    \"Name\": \"Pranav K Mishra\",\n",
-    "                },\n",
-    "                \"To\": [{\"Email\": \"pmishra0102@gmail.com\", \"Name\": \"Pranavs Pager\"}],\n",
-    "                \"Subject\": \"Protocol Step\",\n",
-    "                \"TextPart\": message,\n",
-    "            }\n",
-    "        ]\n",
-    "    }\n",
-    "\n",
-    "    return json_payload\n",
-    "\n",
-    "def send_mailjet_pager(message):\n",
-    "    json_payload = compose_mailjet_json(message)\n",
-    "\n",
-    "    print(json_payload)\n",
-    "\n",
-    "    headers = {\"Content-Type\": \"application/json\"}\n",
-    "\n",
-    "    response = requests.post(\n",
-    "        \"https://api.mailjet.com/v3/send\",\n",
-    "        auth=(mailjet_api_key, mailjet_secret_key),\n",
-    "        data=json.dumps(json_payload),\n",
-    "        headers=headers,\n",
-    "    )\n",
-    "\n",
-    "    print(\"Response Status Code:\", response.status_code)\n",
-    "    print(\"Response Text:\", response.text)\n",
-    "\n",
-    "    if response.status_code == 204:\n",
-    "        print(\"Mailjet API successful!\")\n",
-    "    else:\n",
-    "        print(f\"Failed to notify on mailjet. Status code: {response.status_code}\")\n",
-    "        display(f\"Response: {response.text}\")\n",
-    "\n",
-    "    return response\n",
-    "\n",
     "\n",
     "\n",
     "def send_discord_message(message):\n",
