Add / Fix: Improved matrix message webhook formatting

--- a/protocol-timer.ipynb
+++ b/protocol-timer.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,12 +59,14 @@
     "\n",
     "channel_id = parser.get('discord', 'channel_id')\n",
     "\n",
-    "webhook_url = parser.get('discord', 'webhook')"
+    "webhook_url = parser.get('discord', 'webhook')\n",
+    "\n",
+    "matrix_webhook_url = parser.get('matrix', 'webhook')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +100,17 @@
     "\n",
     "    line2 = f\"print('Duration is {round(total_seconds/60, 3)} minutes')\"\n",
     "\n",
-    "    line3 = f\"countdown(df.Duration.iloc[{index_num}], df.Combined.iloc[{index_num}])\"\n",
+    "    line3 = f\"countdown(df.Duration.iloc[{index_num}], df.Combined.iloc[{index_num}], df.Duration.iloc[{index_num}])\"\n",
     "\n",
     "    combined_lines = line1 + \" \\n\" + line2 + \" \\n\" + line3\n",
     "\n",
     "    return combined_lines\n",
     "\n",
     "\n",
-    "def countdown(timestring, step_text):\n",
+    "def countdown(timestring, step_text, duration):\n",
     "    display(f\"Starting {step_text}\")\n",
-    "    send_discord_message(f\"Starting {step_text}.\")\n",
+    "    # send_discord_message(f\"Starting {step_text}.\")\n",
+    "    send_matrix_message(step_text, duration)\n",
     "\n",
     "    time_obj = date.datetime.strptime(timestring, \"%H:%M:%S\")\n",
     "\n",
@@ -163,13 +166,43 @@
     "                        \"value\": message,\n",
     "                    },\n",
     "                ],\n",
-    "                \"description\": \"Protocol-Timer created by [Pranav Mishra](https://drpranavmishra.com). See this project on [GitHub](https://github.com/pranavmishra90/protocol-timer)\",\n",
+    "                \"footer\": {\n",
+    "                    \"text\": \"Protocol-Timer created by Pranav Mishra (pranavmishra90/protocol-timer)\"\n",
+    "                },\n",
     "            }\n",
     "        ],\n",
     "    }\n",
     "\n",
     "    return json_payload\n",
     "\n",
+    "def compose_matrix_json(message, duration):\n",
+    "    duration_parts = duration.split(\":\")\n",
+    "    duration_var = date.timedelta(hours=int(duration_parts[0]), minutes=int(duration_parts[1]), seconds=int(duration_parts[2]))\n",
+    "\n",
+    "    current_datetime = date.datetime.now()\n",
+    "    resulting_datetime = current_datetime + duration_var\n",
+    "\n",
+    "    step_end_time = resulting_datetime.strftime(\"%I:%M %p\")\n",
+    "\n",
+    "    json_payload = {\n",
+    "        \"html\": f\"<h2>{message}</h2><b>Duration</b>: {duration}</br><b>End Time</b>: {step_end_time}\"\n",
+    "    }\n",
+    "    return json_payload\n",
+    "\n",
+    "\n",
+    "\n",
+    "def send_matrix_message(message, duration):\n",
+    "    json_payload = compose_matrix_json(message, duration)\n",
+    "    headers = {\"Content-Type\": \"application/json\"}\n",
+    "\n",
+    "    response = requests.post(\n",
+    "        matrix_webhook_url, data=json.dumps(json_payload), headers=headers\n",
+    "    )\n",
+    "\n",
+    "    if response.status_code == 202:\n",
+    "        print(\"Matrix notification successful\")\n",
+    "    else:\n",
+    "        print(f\"Failed to notify on Matrix. Status code: {response.status_code}\")\n",
     "\n",
     "def send_discord_message(message):\n",
     "    json_payload = compose_discord_json(message)\n",
@@ -184,8 +217,6 @@
     "        print(\"Discord notification successful!\")\n",
     "    else:\n",
     "        print(f\"Failed to notify on discord. Status code: {response.status_code}\")\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "def current_datetime():\n",
@@ -207,9 +238,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Step Number</th>\n",
+       "      <th>Step Text</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Comment</th>\n",
+       "      <th>Combined</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Paraffin (60 C)</td>\n",
+       "      <td>1:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 15: Paraffin (60 C)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Paraffin (60 C)</td>\n",
+       "      <td>1:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 14: Paraffin (60 C)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Paraffin (60 C)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 13: Paraffin (60 C)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Xylene (RT)</td>\n",
+       "      <td>1:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 12: Xylene (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Xylene (RT)</td>\n",
+       "      <td>0:40:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 11: Xylene (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Xylene (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 10: Xylene (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Xylene (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 9: Xylene (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>100% Ethanol (RT)</td>\n",
+       "      <td>1:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 8: 100% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7</td>\n",
+       "      <td>100% Ethanol (RT)</td>\n",
+       "      <td>0:50:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 7: 100% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>6</td>\n",
+       "      <td>100% Ethanol (RT)</td>\n",
+       "      <td>0:45:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 6: 100% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5</td>\n",
+       "      <td>95% Ethanol (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 5: 95% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>4</td>\n",
+       "      <td>95% Ethanol (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 4: 95% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>3</td>\n",
+       "      <td>80% Ethanol (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 3: 80% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2</td>\n",
+       "      <td>75% Ethanol (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 2: 75% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Formalin (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>Protocol from dx.doi.org/10.17504/protocols.io...</td>\n",
+       "      <td>Step 1: Formalin (RT)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Step Number          Step Text Duration  \\\n",
+       "0            15    Paraffin (60 C)  1:30:00   \n",
+       "1            14    Paraffin (60 C)  1:00:00   \n",
+       "2            13    Paraffin (60 C)  0:30:00   \n",
+       "3            12        Xylene (RT)  1:00:00   \n",
+       "4            11        Xylene (RT)  0:40:00   \n",
+       "5            10        Xylene (RT)  0:30:00   \n",
+       "6             9        Xylene (RT)  0:30:00   \n",
+       "7             8  100% Ethanol (RT)  1:00:00   \n",
+       "8             7  100% Ethanol (RT)  0:50:00   \n",
+       "9             6  100% Ethanol (RT)  0:45:00   \n",
+       "10            5   95% Ethanol (RT)  0:30:00   \n",
+       "11            4   95% Ethanol (RT)  0:30:00   \n",
+       "12            3   80% Ethanol (RT)  0:30:00   \n",
+       "13            2   75% Ethanol (RT)  0:30:00   \n",
+       "14            1      Formalin (RT)  0:30:00   \n",
+       "\n",
+       "                                              Comment  \\\n",
+       "0                                                 NaN   \n",
+       "1                                                 NaN   \n",
+       "2                                                 NaN   \n",
+       "3                                                 NaN   \n",
+       "4                                                 NaN   \n",
+       "5                                                 NaN   \n",
+       "6                                                 NaN   \n",
+       "7                                                 NaN   \n",
+       "8                                                 NaN   \n",
+       "9                                                 NaN   \n",
+       "10                                                NaN   \n",
+       "11                                                NaN   \n",
+       "12                                                NaN   \n",
+       "13                                                NaN   \n",
+       "14  Protocol from dx.doi.org/10.17504/protocols.io...   \n",
+       "\n",
+       "                     Combined  \n",
+       "0    Step 15: Paraffin (60 C)  \n",
+       "1    Step 14: Paraffin (60 C)  \n",
+       "2    Step 13: Paraffin (60 C)  \n",
+       "3        Step 12: Xylene (RT)  \n",
+       "4        Step 11: Xylene (RT)  \n",
+       "5        Step 10: Xylene (RT)  \n",
+       "6         Step 9: Xylene (RT)  \n",
+       "7   Step 8: 100% Ethanol (RT)  \n",
+       "8   Step 7: 100% Ethanol (RT)  \n",
+       "9   Step 6: 100% Ethanol (RT)  \n",
+       "10   Step 5: 95% Ethanol (RT)  \n",
+       "11   Step 4: 95% Ethanol (RT)  \n",
+       "12   Step 3: 80% Ethanol (RT)  \n",
+       "13   Step 2: 75% Ethanol (RT)  \n",
+       "14      Step 1: Formalin (RT)  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "df = pd.read_csv('./protocol.csv')\n",
     "\n",
@@ -240,9 +481,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## Start the protocol\n",
+       "**When you are ready to begin, run the cell below**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "create_new_cell(\"#------ End of protocol ------# \\n #When you have reached this point, you can delete all of the protocol steps which have been created, or simply close this file without saving\")\n",
     "\n",
@@ -258,6 +513,15 @@
     "create_new_cell('send_discord_message(f\"---- STARTING PROTOCOL at {current_datetime()} ----\")')\n",
     "\n",
     "create_new_cell(\"#------ Click here, then run each cells below ------#\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#------ Click here, then run each cells below ------#"
    ]
   }
  ],
